# qt_learn

./: README.md
cpp_qml/: ColorMaker.h  cpp_qml.pro  main.cpp  main.qml
hello_qml/qml/: anchors.qml  keys.qml  list.qml  signal.qml  test.qml
hello_qt/: hello_qt.pro  mainwindow.ui
hello_world/: CMakeLists.txt
multi_windows/: dialog.ui  mainwindow.cpp  mainwindow.ui  multi_windows.pro
pic_filter/: imageProcesser.h  main.cpp  main.qml  pic_filter.pro
qt_proj/: mainwindow.cpp  mainwindow.h  mainwindow.ui
samp2_1/: CMakeLists.txt
samp2_3/: qwdlgmanual.cpp  qwdlgmanual.h
sample12_1/: CMakeLists.txt  main.cpp  myWidget.cpp  myWidget.h  qmybattery.cpp  qmybattery.h
sample2_2/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  qwdialog.cpp  qwdialog.h  qwdialog.ui  sample2_2
sample2_2/sample2_2_autogen/: mocs_compilation.cpp
sample2_3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
sample_3/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
uitest/: uitest.pro
